fix: read CORS origins from environment variable for production